---------------------------------------------
- Wonder Scale Merchant                     -
---------------------------------------------

- v1.0.1050                                 -
---------------------------------------------
- 2020-11-04                                -
---------------------------------------------
.: WSM: Task: Icon in QRcode is too blur (WSM-219)

---------------------------------------------
- 2020-11-03                                -
---------------------------------------------
.：WSM: BugFix: Doesn't implement the correct font for logo (WSM-224)

- v1.0.1040                                 -
---------------------------------------------
- 2020-11-01                                -
---------------------------------------------
.: WSM: Task: Quick Menu Page (WSM-220)
.: WSM: Task: Prevent caching issue (WSM-221)
.: WSM: BugFix: Fix cross month tracking issue (WSM-211)

---------------------------------------------
- 2020-10-31                                -
---------------------------------------------
.: WSM: Task: Deployment (WSM-215)
.: WSM: BugFix: Reading url from backend issue (WSM-218)
.: WSM: BugFix: Fix store page issue (WSM-209)
.: WSM: BugFix: Fix contributor invitation issue (WSM-210)

---------------------------------------------
- 2020-10-25                                -
---------------------------------------------
.: WSM: BugFix: Profile Image with qrcode updated (WSM-209)
.: WSM: Task: Update Tracking URL (WSM-211)

---------------------------------------------
- 2020-10-24                                -
---------------------------------------------
.: WSM: Task: Settings Page (WSM-210)
.: WSM: Task: Reduce shop entry details (WSM-188)
.: WSM: Task: Update home control (WSM-207)

---------------------------------------------
- 2020-10-18                                -
---------------------------------------------
.: WSM: Task: Store Page (WSM-209)

---------------------------------------------