@@ -1,0 +1,34 @@
+.btn-login,
+.btn-facebook,
+.btn-google {
+    border-radius: 2rem;
+    padding-left: 1.5rem;
+    padding-right: 1.5rem;
+    font-size: 1rem;
+    transition: all .2s ease;
+    background-color: #f7f7f7;
+}
+
+.btn-login {
+    color: #7f0000;
+    &:hover{
+        background-color: #7F0000;
+        color: #fff;
+    }
+}
+
+.btn-facebook {
+    color: #4568B2;
+    &:hover{
+        background-color: #4568B2;
+        color: #fff;
+    }
+}
+
+.btn-google{
+    color: #DC4E41;
+    &:hover{
+        background-color: #DC4E41;
+        color: #fff;
+    }
+}
