@@ -4,6 +4,11 @@
 
 - v1.0.1050                                 -
 ---------------------------------------------
+- 2020-11-05                                -
+---------------------------------------------
+.: WSM: Task: Standardize button colors (WSM-217)
+
+---------------------------------------------
 - 2020-11-04                                -
 ---------------------------------------------
 .: WSM: Task: Icon in QRcode is too blur (WSM-219)
